<resources>
    <string name="app_name">DejamobileApp</string>
    <string name="hint_card">Card number</string>
    <string name="hint_expiration">Expiration date</string>
    <string name="hint_cvv">Cvv</string>
    <string name="button_save">Save card</string>
    <string name="empty_not_saved">Card not saved because an error occurred</string>
    <string name="empty_numbers">No numbers…</string>
    <string name="remove_card">Remove card</string>
    <string name="remove_all_cards">Remove all cards</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_purchases">Purchases</string>
    <string name="menu_cards">Cards</string>
    <string name="fill_field">Fill the field to sign up :</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="email_points">Email :</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="remove_account">Remove your account</string>
    <string name="cards_owned">Cards owned :</string>
    <string name="cards_owned_end">%1$d cards owned</string>
    <string name="delete_account_confirmation">Are you sure to delete your account ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="make_purchase">Make a purchase</string>
    <string name="purchase_description">Purchase description</string>
    <string name="purchase_validation">Waiting for transaction validation…</string>
    <string name="purchase_success">The purchase has been successfully completed</string>
    <string name="purchase_amount_euros">%1$d €</string>
    <string name="login">Login</string>
    <string name="login_error">Login error</string>
    <string name="purchase_title">Make a purchase</string>
    <string name="card_title">Add new card</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="male_title">Ms</string>
    <string name="female_title">Mrs</string>
</resources>
